name:                reflex-dom-themes
-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            Class names for various css libs and icon sets.
description:         Experimental set of functions providing tools to 
                     theming on top of reflex-dom-htmlea.
license:             BSD3
license-file:        LICENSE
author:              gspia
maintainer:          Use github to contact author
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24


library
  exposed-modules:     Reflex.Dom.Icons.Raw.Elusive
                       , Reflex.Dom.Icons.Raw.FA
                       , Reflex.Dom.Icons.Raw.FlagIcons
                       , Reflex.Dom.Icons.Raw.FI
                       , Reflex.Dom.Icons.Raw.IcoMoon
                       , Reflex.Dom.Icons.Raw.Ionicons
                       , Reflex.Dom.Icons.Raw.MDI
                       , Reflex.Dom.Icons.Raw.MfgLabs
                       , Reflex.Dom.Icons.Raw.OpenIconic
                       , Reflex.Dom.Icons.Raw.Typicons
                       --
                       , Reflex.Dom.Themes.Raw.BS4
                       , Reflex.Dom.Themes.Raw.Foundation
                       , Reflex.Dom.Themes.Raw.Semantic
                       , Reflex.Dom.Themes.Raw.W3
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base              >=4.9 && <4.10
                       , containers      >=0.5.7 && <0.6
                       , data-default
                       -- , mtl
                       -- , reflex          >= 0.5 && < 0.6
                       -- , reflex-dom-core >= 0.4 && < 0.5
                       , text
                       , reflex-dom-htmlea

  if impl(ghcjs -any)
    build-depends:       ghcjs-base
    ghc-options: -Wall -Wincomplete-uni-patterns 
                 -Wincomplete-record-updates 
                 -Wmissing-import-lists -dedupe
    cpp-options: -DGHCJS_BROWSER
  else
    ghc-options: -Wall -Wincomplete-uni-patterns 
                 -Wincomplete-record-updates 
                 -Wmissing-import-lists

