name:                reflex-dom-themes
version:             0.1.0.3
synopsis:            Class names for various css libs and icon sets.
description:         Experimental set of functions providing tools to 
                     theming on top of reflex-dom-htmlea.
license:             BSD3
license-file:        LICENSE
author:              gspia
maintainer:          Use github to contact author
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.24


--------------------------------------------------------------------------------
library
  exposed-modules:     Reflex.Dom.Icon.Raw.Elusive
                       , Reflex.Dom.Icon.Raw.FA
                       , Reflex.Dom.Icon.Raw.FlagIcons
                       , Reflex.Dom.Icon.Raw.FI
                       , Reflex.Dom.Icon.Raw.IcoMoon
                       , Reflex.Dom.Icon.Raw.Ionicons
                       , Reflex.Dom.Icon.Raw.MDI
                       , Reflex.Dom.Icon.Raw.MfgLabs
                       , Reflex.Dom.Icon.Raw.OpenIconic
                       , Reflex.Dom.Icon.Raw.OpenIconicBS
                       , Reflex.Dom.Icon.Raw.Typicons
                       --
                       , Reflex.Dom.Theme.Raw.Bulma
                       , Reflex.Dom.Theme.Raw.BS4
                       , Reflex.Dom.Theme.Raw.Foundation
                       , Reflex.Dom.Theme.Raw.Semantic
                       , Reflex.Dom.Theme.Raw.W3
                       --
                       , Reflex.Dom.Component.MenuCommon
                       , Reflex.Dom.Component.BS.Menu
                       , Reflex.Dom.Component.BS.Dropdown
                       , Reflex.Dom.Component.Bulma.Menu
                       , Reflex.Dom.Component.Bulma.Dropdown
                       , Reflex.Dom.Component.Foundation.Dropdown
                       , Reflex.Dom.Component.Foundation.Menu
                       , Reflex.Dom.Component.Semantic.Menu
                       , Reflex.Dom.Component.W3.Menu
                       -- , Reflex.Dom.Component.MenuOld
                       , Reflex.Dom.Component.NaiveI18n
  -- other-modules:
  -- other-extensions:
  hs-source-dirs:      lib/src
  default-language:    Haskell2010
  build-depends:       base
                       , containers
                       -- , data-default
                       , lens
                       , mtl
                       , reflex
                       , reflex-dom-core
                       , text
                       , reflex-dom-htmlea
                       , chunked-data
                       , jsaddle
  ghc-options: -Wall -Wincomplete-uni-patterns -O2
               -Wincomplete-record-updates
               -Wmissing-import-lists

