name:                examplesBulma
version:             0.1.0.3
synopsis:            Bulma theme examples
description:         Examples: for ghcid dev-work, for nix-build and
                     for building a webkit2gtk app.
license:             BSD3
author:              gspia
maintainer:          Use github to contact gspia
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
cabal-version:       >=1.24

library
  exposed-modules:     MainBulma
  hs-source-dirs:      libBulma
  default-language:    Haskell2010
  build-depends:        base
                      , containers
                      , lens
                      , mtl
                      , text
                      , vector
                      , ghcjs-dom
                      , reflex
                      , reflex-dom
                      , reflex-dom-core
                      , jsaddle
                      , reflex-dom-htmlea
                      , reflex-dom-themes


executable examplesBulma
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:       base
                     , examplesBulma
                     , reflex-dom
                     , jsaddle
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -O2 -threaded -rtsopts -with-rtsopts=-N
               -Wincomplete-record-updates 
               -Wmissing-import-lists

-- To use ghcid and dev-server.sh, uncomment the following before
-- entering into the nix-shell.
-- executable examplesBulma-wai
--   if impl(ghcjs)
--     buildable:       False
--   main-is:           Main.hs
--   hs-source-dirs:    app-wai
--   default-language:  Haskell2010
--   build-depends:       base
--                      , examplesBulma
--                      , reflex-dom
--                      , reflex-dom-core
--                      , jsaddle
--                      , jsaddle-warp
--                      -- following are for ghcid autoloading
--                      , wai
--                      , warp
--                      , websockets
--                      , wai-app-static
--   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
--                -O2 -threaded -rtsopts -with-rtsopts=-N
--                -Wmissing-import-lists -Wno-redundant-constraints
-- 
