name:                examplesFou
version:             0.1.0.1
synopsis:            Foundation theme examples
description:         Examples: for ghcid dev-work, for nix-build and
                     for building a webkit2gtk app.
license:             BSD3
author:              gspia
maintainer:          Use github to contact gspia
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
cabal-version:       >=1.24

library
  exposed-modules:     MainW
  hs-source-dirs:      libFou
  default-language:    Haskell2010
  build-depends:        base
                      , containers
                      , data-default
                      , ghcjs-dom
                      , reflex
                      , reflex-dom
                      , reflex-dom-core
                      , text
                      , vector
                      , jsaddle
                      , reflex-dom-htmlea
                      , reflex-dom-themes


executable examplesFou
  main-is:           Main.hs
  hs-source-dirs:    app
  default-language:  Haskell2010
  build-depends:       base
                     , examplesFou
                     , reflex-dom
                     , jsaddle
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -O2 -threaded -rtsopts -with-rtsopts=-N
               -Wincomplete-record-updates 
               -Wmissing-import-lists 

