name:                themeExsFou
version:             0.1.0.0
synopsis:            Foundation theme examples
description:         Examples: for ghcid dev-work, for nix-build and
                     for building a webkit2gtk app.
license:             BSD3
author:              gspia
maintainer:          Use github to contact gspia
copyright:           All rights reserved, gspia
category:            Web
build-type:          Simple
cabal-version:       >=1.24

library
  exposed-modules:     MainW
  hs-source-dirs:      lib
  default-language:    Haskell2010
  build-depends:        base
                      , containers
                      , data-default
                      , ghcjs-dom
                      , reflex             >= 0.5 && < 0.6
                      , reflex-dom-core    >= 0.4 && < 0.5
                      , text
                      , jsaddle            >= 0.8.0.0 && < 0.10
                      , reflex-dom-htmlea
                      , reflex-dom-themes


executable themeExFou
  if !impl(ghcjs)
    buildable:       False
  main-is:           Main.hs
  hs-source-dirs:    app-js
  default-language:  Haskell2010
  build-depends:       base
                     , themeExsFou
                     , jsaddle            >= 0.8.0.0 && < 0.10
                     , ghcjs-base
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists -dedupe
  cpp-options: -DGHCJS_BROWSER

executable themeExFou-wai
  if impl(ghcjs)
    buildable:       False
  main-is:           Main.hs
  hs-source-dirs:    app-wai
  default-language:  Haskell2010
  build-depends:       base
                     , themeExsFou
                     , jsaddle            >= 0.8.0.0 && < 0.10
                     , jsaddle-warp
                     , warp
                     , wai
                     , wai-app-static
                     , wai-middleware-static
                     , websockets
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists

executable themeExFou-kit
  if impl(ghcjs)
    buildable:       False
  main-is:           Main.hs
  hs-source-dirs:    app-kit
  default-language:  Haskell2010
  build-depends:       base
                     , themeExsFou
                     , jsaddle            >= 0.8.0.0 && < 0.10
                     , jsaddle-webkit2gtk
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists 

